--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -7,6 +7,7 @@ $button-text: #f3f3f3;
   width: 27%;
   height: 80px;
   margin-top: 20px;
+  margin-bottom: 7px;
   font-size: 24px;
   font-family: "Roboto Mono", monospace;
   font-weight: 400;
