--- a/src/components/Screen/screen.scss
+++ b/src/components/Screen/screen.scss
@@ -14,6 +14,7 @@ $screen-backlight-on: #7fffff;
   border-radius: 6px;
   padding: 10px;
   margin-bottom: 20px;
+  overflow: hidden;
   .left {
     width: 100%;
     font-family: "Roboto Mono", monospace;
